# Tabby

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TabbyProfile-Shutdown.json  TabbyProfile-Startup.json  imgui.ini
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SandboxApp.h
Tabby/: CMakeLists.txt
Tabby-Engine/: CMakeLists.txt
Tabby-Engine/assets/scenes/: 3Dscene.tabby
Tabby-Engine/assets/shaders/: Texture.glsl
Tabby-Engine/src/: EditorLayer.cpp  EditorLayer.h  TabbyEngineApp.cpp
Tabby-Engine/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Tabby/src/: Tabby.h  tbpch.h
Tabby/src/Platform/: MacUtils.h
Tabby/src/Platform/OSX/: MacDialogWindow.cpp  MacDialogWindow.h  MacInput.cpp  MacInput.h  MacPlatformUtils.cpp  MacUtils.mm  MacWindow.cpp  MacWindow.h
Tabby/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Tabby/src/Tabby/: Application.cpp  Application.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Tabby/src/Tabby/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  Timer.h  Timestep.h  Window.h
Tabby/src/Tabby/Debug/: Instrumentor.h
Tabby/src/Tabby/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Tabby/src/Tabby/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Tabby/src/Tabby/Math/: Math.h
Tabby/src/Tabby/Platform/OSX/: MacInput.cpp  MacInput.h  MacWindow.cpp
Tabby/src/Tabby/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Tabby/src/Tabby/Platform/WindowsWindow/: WindowsWindow.cpp
Tabby/src/Tabby/Renderer/: Buffer.cpp  Buffer.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Tabby/src/Tabby/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Tabby/src/Tabby/Utils/: PlatformUtils.h
Tabby2D/: CMakeLists.txt
Tabby2D/src/: tbpch.cpp  tbpch.h
Tabby2D/src/Platform/OSX/: MacInput.cpp  MacPlatformUtils.cpp
Tabby2D/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp
Tabby2D/src/Platform/WindowsWindow/: WindowsWindow.cpp  WindowsWindow.h
Tabby2D/src/Tabby/Core/: Base.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  PlatformDetection.h  Window.cpp
Tabby2D/src/Tabby/Events/: KeyEvent.h
Tabby2D/src/Tabby/ImGui/: ImGuiBuild.cpp
Tabby2D/src/Tabby/Math/: Math.cpp
Tabby2D/src/Tabby/Renderer/: Buffer.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  RendererAPI.cpp  Texture.h  VertexArray.h
Tabby2D/src/Tabby/Scene/: Components.h  Entity.cpp  Scene.cpp  SceneCamera.cpp
Tabby2D/src/Tabby/Utils/: PlatformUtils.h
